# vesper

./: .gitignore  .pre-commit-config.yaml  .rubocop.yml  .rubocop_todo.yml  .yamllint  .yardopts  Gemfile  LICENSE  README.md  Rakefile  friday_gemini_ai.gemspec  gemini.gemspec  project.meta.json  pyproject.toml  release-please-config.json  setup-checksums.sha256
.bundle/: config
.codex/: README.md  state.md
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  dependabot.yml  gitleaks.toml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: basic.md  config.yml
.github/workflows/: README.md  analysis.yml  ci.yml  cleanup.yml  dependencies.yml  deploy-site.yml  e2e.yml  fix-changelog.yml  harperbot.yml  labeler.yml  lock-merged-prs.yml  manual.yml  nightly.yml  pr-title.yml  publish-gem.yml  release.yml  security.yml  stale.yml  (+2 more)
api/: webhook.py
config/: .env.example  environment.rb
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SETUP.md  index.md  security.md
examples/: advanced.rb  basic.rb  modelsdemo.rb
harperbot/: HarperBot.md  config.yaml  harperbot.py  rag.py
lib/: gemini.rb  vesper.rb
scripts/: commit-msg  modelchecker.rb  release.rb  rewrite_msg.sh  summary.rb
tasks/: yard.rake
test/: runner.rb  test_helper.rb  test_helper_no_coverage.rb  test_vesper.py  test_vesper_apply.py
vesper/: Vesper.md  __init__.py  config.yaml  manual.js  rag.py  suggestions.js  vesper.py  vesper_apply.py
website/: 404.html  app.html  experience.html  index.html  layout.js  privacy.html  styles.css  support.html  terms.html  trademark.html
(+38 files in other folders)
