[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vesper"
version = "0.1.0"
description = "GitHub PR Bot with Gemini AI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask",
    "requests",
    "PyGithub",
    "python-dotenv",
    "google-genai",
    "PyYAML"
]

[project.scripts]
vesper = "vesper.vesper:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vesper*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'_UnionGenericAlias' is deprecated and slated for removal in Python 3\\.17:DeprecationWarning:google\\.genai\\.types"
]
